// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render with selected item 1`] = `
<DocumentFragment>
  <div
    class="singleItemSelection"
  >
    <button
      class="button left"
      type="button"
    >
      <span
        aria-label="su-test"
        class="su-test icon"
      />
    </button>
    <div
      class="itemContainer"
    >
      <div
        class="item"
        role="button"
      >
        <div
          class="itemContainer"
        >
          <div
            class="columnList"
          >
            <span
              class="itemColumn"
              style="width: 50%;"
            >
              Name
            </span>
            <span
              class="itemColumn"
              style="width: 50%;"
            >
              Value
            </span>
          </div>
        </div>
      </div>
      <button
        class="removeButton"
        type="button"
      >
        <span
          aria-label="su-trash-alt"
          class="su-trash-alt"
        />
      </button>
    </div>
  </div>
  <div
    data-testid="single-list-overlay"
  />
</DocumentFragment>
`;

exports[`Render with selected item in disabled state 1`] = `
<DocumentFragment>
  <div
    class="singleItemSelection disabled"
  >
    <button
      class="button left"
      disabled=""
      type="button"
    >
      <span
        aria-label="su-test"
        class="su-test icon"
      />
    </button>
    <div
      class="itemContainer"
    >
      <div
        class="item"
        role="button"
      >
        <div
          class="itemContainer"
        >
          <div
            class="columnList"
          >
            <span
              class="itemColumn"
              style="width: 50%;"
            >
              Name
            </span>
            <span
              class="itemColumn"
              style="width: 50%;"
            >
              Value
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    data-testid="single-list-overlay"
  />
</DocumentFragment>
`;

exports[`Show with passed emptyText and icon 1`] = `
<DocumentFragment>
  <div
    class="singleItemSelection"
  >
    <button
      class="button left"
      type="button"
    >
      <span
        aria-label="su-document"
        class="su-document icon"
      />
    </button>
    <div
      class="itemContainer"
    >
      <div
        class="item"
        role="button"
      >
        <div
          class="empty"
        >
          Test
        </div>
      </div>
    </div>
  </div>
  <div
    data-testid="single-list-overlay"
  />
</DocumentFragment>
`;
